--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     padding: 10px;
     align-items: center;
 }
-.navbar > :last-child{
+.options{
   font-size: 1.5rem;
   display: flex;
   justify-content: space-evenly;
